--- a/index.html
+++ b/index.html
@@ -4,79 +4,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap" rel="stylesheet">
     <title>Home</title>
 </head>
-<style>
-    .pp {
-        border-radius: 50%;
-    }
 
-    .scc {
-        border-radius: 50%;
-    }
-    footer {
-  text-align: center;
-  padding: 34px;
-  background-color: rgb(68, 67, 67);
-  color: white;
-}
-</style>
 
 <body>
-    <center>
-        <h1>Welcome to my Portfolio</h1>
-        <hr />
-        <div>
-            <div>
-                <h2>Hello!</h2>
-                <p>My name is Joel Pamintuan, a Web Developer based in Philippines.<br />
-                    I'm open for freelance job around the globe.</p><br />
-                <p>My set of skills are HTML, CSS, Javascript, C#, ASP.Core.</p>
-                <img class="pp" src="./assets/img/Profile picture.jpg" height="100"><br />
-                <a href="index.html">Home</a>&nbsp;
 
-                <a href="#">About</a>&nbsp;
+    <h1 class="whead">Welcome to my Portfolio</h1>
+    <hr />
+    <div>
+        <div id="navi">
+            <h2>Hello!</h2>
+            <p>My name is Joel Pamintuan, a Web Developer based in Philippines.<br />
+                I'm open for freelance job around the globe.</p><br />
+            <p>My set of skills are HTML, CSS, Javascript, C#, ASP.Core.</p>
+            <img class="pp" src="./assets/img/Profile picture.jpg" height="100"><br />
+            <a href="index.html">Home</a>
 
-                <a href="#proj">Projects</a>&nbsp;
+            <a href="#">About</a>
 
-                <a href="#footir">Contact</a>
-                <hr />
-                <h2>About me</h2>
-                <img class="scc" src="./assets/img/projects/school.jpg" height="80">
-                <p>Gradute of BS Computer Science major in System Development<br /></p>
-                <hr />
-                <h2>Work Experience</h2>
-    </center>
+            <a href="#proj">Projects</a>
 
-    <center>
-<iframe src="./public/ojt.html" height="200" width="300" title="Iframe Example"></iframe>
-<iframe src="./public/firstjob.html" height="200" width="300" title="Iframe Example"></iframe>
-<iframe src="./public/secjob.html" height="200" width="300" title="Iframe Example"></iframe>
-<iframe src="./public/thrdjob.html" height="200" width="300" title="Iframe Example"></iframe>
-</center>   
-<center>
-        <hr />
-        <div id="proj" class="projects">
-            <h2>My Projects</h2>
-
-            <ul>
-                <img src="./assets/img/projects/1.jpg" height="230">&nbsp;
-                <img src="./assets/img/projects/2.jpg" height="230">&nbsp;
-                <img src="./assets/img/projects/3.jpg" height="230">&nbsp;
-                <img src="./assets/img/projects/4.jpg" height="230">&nbsp;
-                <img src="./assets/img/projects/5.jpg" height="230">&nbsp;
-                <img src="./assets/img/projects/6.jpg" height="230">&nbsp;
-            </ul>
-        </div>
+            <a href="#footir">Contact</a>
+            <hr />
+            <h2>About me</h2>
+            <img class="scc" src="./assets/img/projects/school.jpg" height="80">
+            <p>Gradute of BS Computer Science major in System Development<br /></p>
+            <hr />
+            <h2>Work Experience</h2>
 
         </div>
-    </center>
+
+            <iframe src="./public/ojt.html" height="200" width="300" title="Iframe Example"></iframe>
+            <iframe src="./public/firstjob.html" height="200" width="300" title="Iframe Example"></iframe>
+            <iframe src="./public/secjob.html" height="200" width="300" title="Iframe Example"></iframe>
+            <iframe src="./public/thrdjob.html" height="200" width="300" title="Iframe Example"></iframe>
+
+            <hr />
+            <div id="proj" class="projects">
+                <h2>My Projects</h2>
+
+                <ul>
+                    <img src="./assets/img/projects/1.jpg" height="230">&nbsp;
+                    <img src="./assets/img/projects/2.jpg" height="230">&nbsp;
+                    <img src="./assets/img/projects/3.jpg" height="230">&nbsp;
+                    <img src="./assets/img/projects/4.jpg" height="230">&nbsp;
+                    <img src="./assets/img/projects/5.jpg" height="230">&nbsp;
+                    <img src="./assets/img/projects/6.jpg" height="230">&nbsp;
+                </ul>
+            </div>
+
+       
+
     </div>
     <div id="footir">
-    <footer>
-        <p>/Author: Joel Pamintuan /<br/>/ Copyright:© 2023/</p>
-        <p><a href="mailto:jpamintuan26@gmail.com">jpamintuan26@gmail.com</a></p>
-      </footer>
+        <footer>
+            <p>/Author: Joel Pamintuan /<br />/ Copyright:© 2023/</p>
+            <p><a href="mailto:jpamintuan26@gmail.com">jpamintuan26@gmail.com</a></p>
+        </footer>
     </div>
 </body>
 
