--- a/public/firstjob.html
+++ b/public/firstjob.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-   <center> <th><img src="../assets/img/projects/job2.jpg" height="50"><br /><b>Virtual assistant / Admin Support </b></p></center>
+<th><img src="../assets/img/projects/job2.jpg" height="50"><br /><b>Virtual assistant / Admin Support </b></p>
         <ol>
             <li>Data Entry
                 <p>I do data entry for my client. converting checks to excel records.<br /></p>
