--- a/public/ojt.html
+++ b/public/ojt.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-  <center>  <th><img src="../assets/img/projects/firstojt.jpg" height="50"><br /><b> <p>My daily task</b><br /></p></center>
+<th><img src="../assets/img/projects/firstojt.jpg" height="50"><br /><b> <p>My daily task</b><br /></p>
         <ol>
             <p><br/><li>monitor and escalate the issues that coming from the main
                 office<br />
