--- a/public/secjob.html
+++ b/public/secjob.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <center><img src="../assets/img/projects/job3.jpg" height="50"><br /><b>Web Developer</b> <p>My Task as Web Developer<br /></p></center>
+<img src="../assets/img/projects/job3.jpg" height="50"><br /><b>Web Developer</b> <p>My Task as Web Developer<br /></p>
 <ol>
         <li>Creating the landing page
             <p>Creating the landing page of the company<br /></p>
